Fixed correlation file saving

--- a/JOES DEMO NOTEBOOK.ipynb
+++ b/JOES DEMO NOTEBOOK.ipynb
@@ -94,6 +94,13 @@
     "\t\"demo/input/ms/3126_2nM_BR3.csv\",\n",
     "\t\"demo/input/ms/3127_2nM_BR3.csv\",\n",
     "\t\"demo/input/ms/3138_2nM_BR3.csv\"]]\n",
+    "#Open pipeline/demo/input/ms/2934_2nM_BR1.csv to see the structure of these files\n",
+    "    #The first two columns are the peptide sequences and protein descriptions from MS analysis\n",
+    "        #Keep the full protein description (OX = ... GN = ...) because the pipeline will sometimes display GNs for short\n",
+    "    #The next n columns are peptide abundance measurements that have been filtered for high confidence\n",
+    "        #and normalized to the SUP channel so that different runs can be compared.\n",
+    "    #Including the header row with titles is required, although the names of the columns will be written over by the pipeline\n",
+    "        #However, the n columns of abundance measurements should be in time order\n",
     "\n",
     "#We can also load technical replicates, which will be combined differently than experimental ones\n",
     "technicalReplicate = [\"demo/input/ms/2934_2nM_BR2TR.csv\",\n",
@@ -104,11 +111,17 @@
     "\t\"demo/input/ms/3126_2nM_BR2TR.csv\",\n",
     "\t\"demo/input/ms/3127_2nM_BR2TR.csv\",\n",
     "\t\"demo/input/ms/3138_2nM_BR2TR.csv\"]\n",
+    "#Open pipeline/demo/input/ms/2934_2nM_BR2TR.csv to see the structure of these files\n",
+    "    #These are structured the same as MS replicate data\n",
     "\n",
     "#We can also load phenotypic data replicates.\n",
     "phenotypicMeasurement = ['demo/input/ph/PhenoClass 1.csv',\n",
     "\t'demo/input/ph/PhenoClass 3.csv',\n",
     "\t'demo/input/ph/PhenoClass 4.csv']\n",
+    "#Open pipeline/demo/input/ph/PhenoClass1.csv to see the structure of these files\n",
+    "    #The two columns are Cell Line and a numerical replicate identifier column (e.g. 1, 2...)\n",
+    "    #Each phenotypic replicate should have one measurement per cell line\n",
+    "    #Including the hreader row with Cell Line and a numerical replicate identifier is required\n",
     "\n",
     "#Finally, we have to include information about the names of the cell lines and the time points we gather MS data at\n",
     "cell_lines = ['2934','2935','2936','2937','2938','3126','3127','3138']\n",
