--- a/JOES DEMO NOTEBOOK.ipynb
+++ b/JOES DEMO NOTEBOOK.ipynb
@@ -2,21 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#SHORTCUTS\n",
-    "    #ShiftEnter run current cell and more to the next\n",
+    "    #ShiftEnter run current cell and move to the next\n",
     "    #CtrlEnter run current cell\n",
     "    #Ctrl/ toggle commenting of line"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done adjusting...\n"
+     ]
+    }
+   ],
    "source": [
     "#so that notebook fills screen\n",
     "from IPython.core.display import display, HTML\n",
@@ -27,9 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done importing...\n"
+     ]
+    }
+   ],
    "source": [
     "#Welcome to the demo/tutorial for Joe Faraguna's Python pipeline for MS/phenotypic data analysis! \n",
     "#The code I've written for the pipeline is contained within 2 python files, classes.py and modules.py\n",
